projetGL/src/test/deca/context/invalid/provided/invalide_class_02_MethodDefinie.deca
// Description : test d'existence d'une méthode plusieur fois dans la méme classe.
// Sortie:
//  la méthode sous le nom setX est définie plusieur fois.

class A{
    protected int x;

    int setX(int y){
        this.x = y;
        return x;
    }
    void setX(int b){
        this.x = b;
    }
}